<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="constantin.fpv_vr.main.AMain"
    android:orientation="vertical">


    <Button
        android:id="@+id/b_startMonoVideoOnly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start Video Only"
        android:onClick="onClick"
        tools:ignore="HardcodedText"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"/>

    <Button
        android:id="@+id/b_startMonoVideoOSD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start Video and OSD"
        android:onClick="onClick"
        tools:ignore="HardcodedText"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"/>

    <Button
        android:id="@+id/b_startStereo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="Start Video and OSD in VR/Stereo mode"
        tools:ignore="HardcodedText"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp">

        <Button
            android:id="@+id/b_OSDSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="OSD&#10;Settings"
            android:onClick="onClick"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/b_Connect"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Connect&#10;(V/T Settings)"
            android:onClick="onClick"
            tools:ignore="HardcodedText" />

    </LinearLayout>


</LinearLayout>
