<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="constantin.fpv_vr.connect.AConnect">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/connect_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/AppTheme"
        android:theme="@style/MyStyleNoActionBar" >

        <Spinner
            android:id="@+id/spinner_connection_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/entriesConnectionType"
            android:layout_weight="1" />

    </androidx.appcompat.widget.Toolbar>


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>
