<?xml version="1.0" encoding="utf-8"?>



<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="constantin.fpv_vr.Activity_Main"
    android:orientation="vertical"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start Video Only"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start Video and OSD"
        android:onClick="onClick" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start Video and OSD in VR/Stereo mode"
        android:onClick="onClick" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="General&#10;Settings"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Connect/&#10;Network settings"
            android:onClick="onClick" />

    </LinearLayout>



</LinearLayout>
